feat: Enhance portfolio and services sections with animations and SEO components
- Added animated components to PortfolioSection and ServicesSection for improved user engagement.
- Introduced SEOComponents for better semantic structure and accessibility.
- Implemented ScrollIndicators for visual feedback on scroll progress.
- Created hooks for active section detection and scroll animations.
- Developed a comprehensive SEO configuration and structured data generation.
- Updated localization files with SEO metadata and keywords for better search visibility.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "navigation": {
+    "home": "Home",
     "services": "Services",
     "portfolio": "Portfolio",
     "contact": "Contact",
@@ -146,5 +147,36 @@
   },
   "footer": {
     "copyright": "© 2024 INDIGO PRODUXION"
+  },
+  "seo": {
+    "meta": {
+      "homeTitle": "INDIGO PRODUXION - Professional Music Production Studio | Recording, Mixing & Mastering",
+      "homeDescription": "Professional music production studio in Mexico City. Recording, mixing, mastering and audiovisual production services with high-end equipment and experienced producers.",
+      "servicesTitle": "Music Production Services | INDIGO PRODUXION",
+      "servicesDescription": "Complete music production services: professional recording, mixing, mastering, music video production and audio post-production in Mexico City.",
+      "portfolioTitle": "Portfolio of Works | INDIGO PRODUXION",
+      "portfolioDescription": "Discover our best music production work, music videos and audiovisual projects. Over 500 tracks produced with national and international artists.",
+      "contactTitle": "Contact & Location | INDIGO PRODUXION",
+      "contactDescription": "Visit our studio in Mexico City or contact us to schedule your recording session. Address, phone numbers and office hours."
+    },
+    "keywords": {
+      "home": ["recording studio CDMX", "music production Mexico", "mixing and mastering", "professional recording", "music studio Mexico City", "music producer", "professional audio", "professional recording studio"],
+      "services": ["recording services", "professional mixing", "mastering", "music production", "band recording", "podcast recording", "music video production", "audio post-production"],
+      "portfolio": ["musical works", "production portfolio", "music demos", "music videos", "audiovisual projects", "recorded artists", "produced music"],
+      "contact": ["studio contact", "schedule session", "book studio", "studio location CDMX", "studio phone", "recording hours"]
+    },
+    "structured": {
+      "businessName": "INDIGO PRODUXION",
+      "businessType": "Music Production Studio",
+      "description": "Professional music production studio specialized in recording, mixing, mastering and audiovisual production",
+      "services": [
+        "Music Recording",
+        "Mixing and Mastering",
+        "Music Production", 
+        "Audio Post-Production",
+        "Podcast Recording",
+        "Music Video Production"
+      ]
+    }
   }
 }
