feat: Add navigation menu and close menu translations to English and Spanish locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,9 @@
     "portfolio": "Portfolio",
     "contact": "Contact",
     "bookSession": "Book Session",
-    "toggleTheme": "Toggle theme"
+    "toggleTheme": "Toggle theme",
+    "menu": "Navigation",
+    "closeMenu": "Close menu"
   },
   "hero": {
     "badge": "🎵 Audiovisual Production Studio",
